--- a/package.json
+++ b/package.json
@@ -28,11 +28,18 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/chai-as-promised": "^0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.9.1",
+    "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.18",
     "@types/reflect-metadata": "^0.0.5",
-    "@types/stack-trace": "^0.0.28"
+    "@types/stack-trace": "^0.0.28",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.4.1",
+    "nyc": "^10.3.2"
   }
 }
