--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
     "@angular/core": "^4.1.3",
-    "express": "^4.15.3",
-    "express-graphql": "^0.6.5",
-    "graphql": "^0.9.6",
     "reflect-metadata": "^0.1.0",
     "rxjs": "^5.4.0",
     "stack-trace": "^0.0.10",
@@ -41,5 +38,8 @@
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.4.1",
     "nyc": "^10.3.2"
+  },
+  "peerDependencies": {
+    "graphql": "^0.10.0"
   }
 }
