--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "grapp-example-hello-world",
   "version": "0.1.0",
   "description": "example for grapp",
   "main": "main.js",
