--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
     "@angular/core": "^4.1.3",
+    "graphql": "^0.10.1",
+    "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
     "rxjs": "^5.4.0",
     "stack-trace": "^0.0.10",
@@ -31,7 +33,9 @@
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.9.1",
     "@types/mocha": "^2.2.41",
+    "@types/mongodb": "^2.2.4",
     "@types/node": "^7.0.18",
+    "@types/pluralize": "^0.0.27",
     "@types/reflect-metadata": "^0.0.5",
     "@types/stack-trace": "^0.0.28",
     "chai": "^3.5.0",
@@ -40,6 +44,7 @@
     "nyc": "^10.3.2"
   },
   "peerDependencies": {
-    "graphql": "^0.10.0"
+    "graphql": "^0.10.0",
+    "mongodb": "^2.2.28"
   }
 }
