--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
     "rxjs": "^5.4.0",
+    "shortid": "^2.2.8",
     "stack-trace": "^0.0.10",
     "zone.js": "^0.8.4"
   },
@@ -37,6 +38,7 @@
     "@types/node": "^7.0.18",
     "@types/pluralize": "^0.0.27",
     "@types/reflect-metadata": "^0.0.5",
+    "@types/shortid": "^0.0.29",
     "@types/stack-trace": "^0.0.28",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
