--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
-    "@angular/core": "^4.1.3",
     "graphql": "^0.10.1",
+    "mongodb": "^2.2.31",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
-    "rxjs": "^5.4.0",
+    "rxjs": "^5.4.2",
     "shortid": "^2.2.8",
     "stack-trace": "^0.0.10",
     "zone.js": "^0.8.4"
@@ -46,6 +46,7 @@
     "nyc": "^10.3.2"
   },
   "peerDependencies": {
+    "@angular/core": "^4.1.3",
     "graphql": "^0.10.0",
     "mongodb": "^2.2.28"
   }
