--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "../../dist/core",
+    "outDir": "../dist",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
