--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
+    "@angular/core": "^4.4.4",
     "graphql": "^0.10.1",
     "mongodb": "^2.2.31",
     "pluralize": "^5.0.0",
@@ -34,7 +35,7 @@
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.9.1",
     "@types/mocha": "^2.2.41",
-    "@types/mongodb": "^2.2.4",
+    "@types/mongodb": "^2.2.11",
     "@types/node": "^7.0.18",
     "@types/pluralize": "^0.0.27",
     "@types/reflect-metadata": "^0.0.5",
