--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grapp",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "node framework for graphql applications",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,20 +12,17 @@
   },
   "keywords": [
     "node",
-    "graphql"
+    "graphql",
+    "mongodb"
   ],
   "author": "guduf <gudufour@gmail.com>",
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
-    "@angular/core": "^4.4.4",
-    "graphql": "^0.10.1",
-    "graphql-tools": "^2.4.0",
-    "mongodb": "^2.2.31",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
-    "rxjs": "^5.4.2",
-    "shortid": "^2.2.8",
+    "rxjs": "^5.4.0",
+    "shortid": "^2.2.0",
     "stack-trace": "^0.0.10",
     "zone.js": "^0.8.4"
   },
@@ -48,8 +45,9 @@
     "nyc": "^10.3.2"
   },
   "peerDependencies": {
-    "@angular/core": "^4.1.3",
-    "graphql": "^0.10.0",
-    "mongodb": "^2.2.28"
+    "@angular/core": "^4.4.0",
+    "graphql": "^0.11.7",
+    "graphql-tools": "^2.4.0",
+    "mongodb": "^2.2.0"
   }
 }
