--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist",
+    "outDir": "../lib",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
