before implements Subscription

--- a/examples/jla-monitor-womb/src/tsconfig.json
+++ b/examples/jla-monitor-womb/src/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "outDir": "../dist",
     "sourceMap": true,
     "declaration": true,
     "module": "commonjs",
