--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grapp",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "node framework for graphql applications",
   "main": "lib/index.js",
   "scripts": {
@@ -31,14 +31,15 @@
     "@types/chai-as-promised": "^0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-graphql": "^0.0.33",
-    "@types/graphql": "^0.9.1",
+    "@types/graphql": "^0.11.0",
     "@types/mocha": "^2.2.41",
-    "@types/mongodb": "^2.2.11",
-    "@types/node": "^7.0.18",
+    "@types/mongodb": "^2.2.0",
+    "@types/node": "7.0.18",
     "@types/pluralize": "^0.0.27",
     "@types/reflect-metadata": "^0.0.5",
     "@types/shortid": "^0.0.29",
     "@types/stack-trace": "^0.0.28",
+    "@types/zen-observable": "^0.5.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.4.1",
