--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "sourceMap": true,
     "declaration": true,
     "module": "commonjs",
