--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
+    "graphql-subscriptions": "^0.5.4",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
     "rxjs": "^5.4.0",
