--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "rxjs": "^5.4.0",
     "shortid": "^2.2.0",
     "stack-trace": "^0.0.10",
+    "subscriptions-transport-ws": "^0.9.1",
+    "ws": "^3.2.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/reflect-metadata": "^0.0.5",
     "@types/shortid": "^0.0.29",
     "@types/stack-trace": "^0.0.28",
+    "@types/ws": "^3.2.0",
     "@types/zen-observable": "^0.5.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
