--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.0.0",
     "apollo-link": "^0.8.0",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^2.4.0",
     "mongodb": "^2.2.33",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
-    "rxjs": "^5.5.0",
     "shortid": "^2.2.0",
     "stack-trace": "^0.0.10",
     "subscriptions-transport-ws": "^0.9.1",
@@ -53,7 +53,9 @@
   },
   "peerDependencies": {
     "@angular/core": "^4.4.0",
-    "graphql": "^0.11.7"
+    "graphql": "^0.11.7",
+    "rxjs": "^5.5.0",
+    "ws": "^3.2.0"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
