--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node framework for graphql applications",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pdep": "npm i @angular/core@^4.4.0 graphql@^0.11.7 rxjs@^5.5.0 ws@^3.2.0"
   },
   "repository": {
     "type": "git",
@@ -44,7 +45,6 @@
     "@types/reflect-metadata": "^0.0.5",
     "@types/shortid": "^0.0.29",
     "@types/stack-trace": "^0.0.28",
-    "@types/ws": "3.2.0",
     "@types/zen-observable": "^0.5.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
