--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-link": "^0.8.0",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^2.4.0",
+    "iterall": "^1.1.3",
     "mongodb": "^2.2.33",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
