--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*.log
+*.pem
+*.pub
+
 dist/
 node_modules/
 packages/**/src/**/*.d.ts
@@ -15,5 +19,11 @@ yarn.lock
 # Tests
 .nyc_output/
 coverage/
+test/**/*.d.ts
+test/**/*.js
+test/**/*.js.map
+
+# Documentation
+doc/
 
 __*
