--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "node framework for graphql applications",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "pdep": "npm i @angular/core@^4.4.0 graphql@^0.11.7 rxjs@^5.5.0 ws@^3.2.0"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,14 +19,18 @@
   "license": "ISC",
   "homepage": "https://github.com/guduf/grapp#readme",
   "dependencies": {
+    "@angular/core": "^5.0.0",
     "apollo-cache-inmemory": "^1.0.0",
     "apollo-link": "^0.8.0",
+    "graphql": "^0.11.0",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^2.4.0",
+    "istanbul": "^0.4.0",
     "iterall": "^1.1.3",
     "mongodb": "^2.2.33",
     "pluralize": "^5.0.0",
     "reflect-metadata": "^0.1.0",
+    "rxjs": "^5.5.0",
     "shortid": "^2.2.0",
     "stack-trace": "^0.0.10",
     "subscriptions-transport-ws": "^0.9.1",
@@ -39,6 +42,7 @@
     "@types/express": "^4.0.35",
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.11.0",
+    "@types/jest": "^22.1.0",
     "@types/mocha": "^2.2.41",
     "@types/mongodb": "^2.2.0",
     "@types/node": "7.0.18",
@@ -49,17 +53,41 @@
     "@types/zen-observable": "^0.5.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "mocha": "^3.4.1",
-    "nyc": "^10.3.2"
+    "jest": "^22.0.0",
+    "ts-jest": "^22.0.0",
+    "typescript": "^2.7.0"
   },
   "peerDependencies": {
     "@angular/core": "^4.4.0",
     "graphql": "^0.11.7",
     "rxjs": "^5.5.0",
-    "ws": "^3.2.0"
+    "ws": "^0.2.0"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
     "definition": "lib/index.d.ts"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "coverageDirectory": "coverage/",
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    },
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "/test/.*\\.spec\\.ts$",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ]
   }
 }
