--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "node framework for graphql applications",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "doc": "yarn doc:html && yarn doc:serve",
+    "doc:build": "typedoc --out doc/ src/",
+    "doc:serve": "http-server doc/",
+    "test": "jest",
+    "test:lcov:serve": "http-server coverage/lcov-report"
   },
   "repository": {
     "type": "git",
@@ -37,13 +41,10 @@
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "@types/chai-as-promised": "^0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.11.0",
     "@types/jest": "^22.1.0",
-    "@types/mocha": "^2.2.41",
     "@types/mongodb": "^2.2.0",
     "@types/node": "7.0.18",
     "@types/pluralize": "^0.0.27",
@@ -53,8 +54,11 @@
     "@types/zen-observable": "^0.5.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "http-server": "^0.11.1",
     "jest": "^22.0.0",
     "ts-jest": "^22.0.0",
+    "tslint": "^5.9.1",
+    "typedoc": "^0.10.0",
     "typescript": "^2.7.0"
   },
   "peerDependencies": {
@@ -73,14 +77,6 @@
       "src/**/*.ts"
     ],
     "coverageDirectory": "coverage/",
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": -10
-      }
-    },
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
